# roboracer-f110-gym

./: .gitignore  README.md
controller/: README.md  package.xml  setup.py
controller/config/: pure_pursuit.yaml
controller/controller/: pp_overtake.py  pure_pursuit_node.py
controller/launch/: pure_pursuit.launch.py
controller_py/: package.xml  setup.py
controller_py/config/: pure_pursuit.yaml
controller_py/controller_py/: pp_overtake.py
controller_py/launch/: pure_pursuit.launch.py
f110_system_launch/: package.xml  setup.cfg  setup.py
f110_system_launch/launch/: full_system.launch.py
f1tenth_gym_ros/: setup.py
f1tenth_gym_ros/config/: sim.yaml
f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
f1tenth_gym_ros/launch/: follow_view.rviz  global_view.rviz  gym_bridge.rviz  gym_bridge_launch.py
f1tenth_gym_ros/maps/: map5.yaml  pgm2png.py
global-planning/: lane_generator.py  requirements.txt  waypoint_publisher.py
global-planning/config/: params.yaml
global-planning/maps/: map5.pgm  map5.yaml
global-planning/params/: racecar.ini
global_planner/: README.md  package.xml  setup.py
global_planner/global_planner/: test.py  waypoints_from_csv.py
global_planner/launch/: global_planner.launch.py
global_planner/outputs/: centerline.csv  traj_race_cl.csv
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: ObstacleArray.msg  Waypoint.msg  WaypointArray.msg
local_planner/: README.md  package.xml  setup.py
local_planner/launch/: local_planner.launch.py
local_planner/local_planner/: local_planner.py
localization/: README.md  package.xml  setup.py
localization/launch/: build_static_map.launch.py
localization/localization/: build_static_map.py  fit_static_walls.py
localization/static_map/: plot_debug_points.py  plot_static_map.py  static_map.npz
perception/: README.md  package.xml  setup.py
perception/launch/: perception.launch.py
perception/perception/: detect.py  detect_.py  detect_0.py  detect_1.py  detect_vis.py  ekf_vs_gt_monitor.py  frenet_converter.py  opponent_tracker.py  opponent_tracker_1.py  test.py  tf_bridge_map_odom.py  waypoints_from_csv_node.py
perception/results/: kpi_log.csv  obstacles_debug.npz  obstacles_ekf.csv  offline_eval.py  plot_obstacles_on_track.py
perception/waypoints/map5/: global_waypoints0.csv  read_global_waypoints.py
roboracer_f110_bringup/: README.md  package.xml  setup.cfg  setup.py
roboracer_f110_bringup/launch/: build_static_map.launch.py  full_system.launch.py
roboracer_interfaces/: CMakeLists.txt  README.md  package.xml
roboracer_interfaces/msg/: OTWpntArray.msg  ObstacleArray.msg  Waypoint.msg  (+1 more)
roboracer_utils/: README.md  package.xml  setup.cfg  setup.py
roboracer_utils/launch/: roboracer_utils.launch.py
roboracer_utils/roboracer_utils/: frenet_converter.py  frenet_odom_republisher.py  tf_bridge_map_odom.py
utils/: package.xml  setup.py
(+17 files in other folders)
