<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>Implements opponent vehicle detection and tracking based on LiDAR sensor data, providing estimated opponent states such as position and velocity for downstream planning modules.</description>
  <maintainer email="93693983+Lyhoh@users.noreply.github.com">lyh</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>gym</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
