<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboracer_utils</name>
  <version>0.0.0</version>
  <description>Provides shared utility functions, including coordinate transformations and common mathematical tools, used across multiple Roboracer packages.</description>
  <maintainer email="93693983+Lyhoh@users.noreply.github.com">lyh</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>f110_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
